--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+    <h1> This is a new web page</h1>
+<p> This is a paragraph, isn't it grand.</p>
 </body>
 </html>
