--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -46,18 +46,52 @@
             <h2>Search our courses</h2>
             <form>
                 <input type="text" name="keywordbox" value="Enter Keyword">
-
+                <select>
+                    <option value="compsci">Computer Science</option>
+                    <option value="digmed">Digital Media</option>
+                    <option value="network">Computer Network Management and Design</option>
+                    <option value="other">Other</option>
+                </select>
+                <input type="submit" value="Search">
             </form>
+
+            <ul>
+                <li><a href="#">Architecture, Construction & Surveying</a></li>
+                <li><a href="#">Business, Management & Accounting</a></li>
+                <li><a href="#">Engineering</a></li>
+                <li><a href="#">Information, Communication & Media</a></li>
+                <li><a href="#">Law</a></li>
+                <li><a href="#">Art & Design</a></li>
+                <li><a href="#">Computing</a></li>
+                <li><a href="#">Health Professions</a></li>
+                <li><a href="#">Laboratory, Biomedical & Sports Sciences</a></li>
+                <li><a href="#">Social Work & Social Services</a></li>
+            </ul>
 
         </section>
 
         <!--Section 2-->
         <section>
+            <img src="advertbanner.png" alt="Top UK University for Graduate Employment - HESA Destination of UK Leavers Survey 2013/14. Published by HESA, August 2015"/>
 
         </section>
 
         <!--Section 3-->
         <section>
+            <!--Article 1-->
+            <article>
+
+            </article>
+
+            <!--Article 2-->
+            <article>
+
+            </article>
+
+            <!--Article 3-->
+            <article>
+
+            </article>
 
         </section>
 
