--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -80,24 +80,34 @@
         <section>
             <!--Article 1-->
             <article>
-
+                <h3>Postgraduate Open Evening</h3>
+                <img src="newsarticle.png" alt="Postgraduate students talking">
+                <p>Register to attend...</p>
             </article>
 
             <!--Article 2-->
             <article>
-
+                <h3>Visit Us</h3>
+                <img src="newsarticle2.png" alt="Sir Ian Wood Building">
+                <p>Your chance to visit...</p>
             </article>
 
             <!--Article 3-->
             <article>
-
+                <h3>International Students</h3>
+                <img src="newsarticle3.png" alt="Students deep in thought">
+                <p>Information for future...</p>
             </article>
-
         </section>
-
     </main>
     <!--Start of footer-->
     <footer>
+        <h2>Connect with Us</h2>
+        <ul>
+            <li><a href="http://www.facebook.com"><img src="facebooklogo.png" alt="Facebook"</a></li>
+            <li><a href="http://www.twitter.com"><img src="twitterlogo.png" alt="Twitter"</a></li>
+            <li><a href="http://www.youtube.com"><img src="youtubelogo.png" alt="YouTube"</a></li>
+        </ul>
 
     </footer>
 </body>
