--- a/Lab 2/quiz.html
+++ b/Lab 2/quiz.html
@@ -12,7 +12,7 @@
     <main>
         <h2>Question 1</h2>
         <form action="test.php" method="post">
-            <input type="text" name="answer1" value="Type 'horse'">
+            <input type="text" name="answer1" placeholder="Type 'horse'">
             <input type="submit" value="Check">
         </form>
 
