--- a/Lab 2/quiz.html
+++ b/Lab 2/quiz.html
@@ -11,7 +11,7 @@
     </section>
     <main>
         <h2>Question 1</h2>
-<!--        <form action="test.php" method="post"> --><form>
+        <form action="test.php" method="post">
             <input type="text" name="answer1" placeholder="Type 'horse'">
             <input type="submit" value="Check">
         </form>
