--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>RGU Homepage</title>
+    <link rel="stylesheet" href = "style.css" type="text/css">
 </head>
 <body>
     <!--Start of Header-->
@@ -27,7 +28,7 @@
             </form>
         </div>
         <nav>
-            <ul>
+            <ul id = "links">
                 <li><a href="#">Areas of Study</a></li>
                 <li><a href="#">Future Students</a></li>
                 <li><a href="#">Student Life</a></li>
@@ -44,7 +45,7 @@
         <!--Section 1-->
         <section>
             <h2>Search our courses</h2>
-            <form>
+            <form id="pinknightmare">
                 <input type="text" name="keywordbox" value="Enter Keyword">
                 <select>
                     <option value="compsci">Computer Science</option>
@@ -80,7 +81,7 @@
         <section>
             <!--Article 1-->
             <article>
-                <h3>Postgraduate Open Evening</h3>
+                <h3 class="Emphasis">Postgraduate Open Evening</h3>
                 <img src="newsarticle.png" alt="Postgraduate students talking">
                 <p>Register to attend...</p>
             </article>
