--- a/Lab 3/index.html
+++ b/Lab 3/index.html
@@ -40,7 +40,7 @@
             <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
-    <br></br>
+    <br/>
 </header>
 <!--Start of main body of page-->
 <main>
@@ -73,7 +73,7 @@
             <li><a href="#">Social Work & Social Services</a></li>
             </div>
         </ul>
-
+    <br/>
     </section>
 
     <!--Section 2-->
@@ -105,10 +105,10 @@
             <p>Information for future...</p>
         </article>
     </section>
-    <br></br>
+    <br/>
 </main>
 <!--Start of footer-->
-<footer>
+<footer id="foot">
     <h2>Connect with Us</h2>
     <ul id="footerlist">
         <li><a href="http://www.facebook.com"><img src="facebooklogo.png" alt="Facebook"></a></li>
