--- a/Lab 3/index.html
+++ b/Lab 3/index.html
@@ -45,6 +45,7 @@
 <!--Start of main body of page-->
 <main>
     <!--Section 1-->
+    <img src="Images/banner.jpg" width=100% alt="Robert Gordon University"/>
     <section>
         <h2>Search our courses</h2>
         <form>
